--- a/src/main/webapp/modal-forms/modal-signup.html
+++ b/src/main/webapp/modal-forms/modal-signup.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="modal-footer">
-      <button class="btn btn-success" ng-click="register()" ng-disabled="signUpForm.$invalid || isRegistering">Register</button>
+      <button class="btn btn-success" ng-click="ok()" ng-disabled="signUpForm.$invalid || isRegistering">Register</button>
      	<button class="btn btn-default" ng-click="cancel()" ng-disabled="isRegistering">Cancel</button>
      	<span ng-show="isRegistering">Registering...</span>
   	</div>
