--- a/src/main/webapp/modal-forms/settings/named-graphs/modal-graph.html
+++ b/src/main/webapp/modal-forms/settings/named-graphs/modal-graph.html
@@ -74,10 +74,10 @@
         </div>
       </div>
 
-      <div ng-show="namedgraph.graph.author.length > 0">
-        <label class="col-xs-2 control-label">Authors</label>
+      <div ng-show="namedgraph.graph.contributor.length > 0">
+        <label class="col-xs-2 control-label">Contributor(s)</label>
         <div class="col-xs-10">
-          <p class="form-control-static" ng-repeat="s in namedgraph.graph.author">{{s}}</p>
+          <p class="form-control-static" ng-repeat="s in namedgraph.graph.contributor">{{s}}</p>
         </div>
       </div>
 
