--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,7 +82,7 @@
             </li>
             
             <li ng-if="!isUserAuthenticated() && $root.isSystemSetUp">
-              <a href="" ng-click="signUp()">Sing Up </a>
+              <a href="" ng-click="register()"><div class="glyphicon glyphicon-log-out"></div>Sign Up</a>
             </li>
             
 
@@ -136,25 +136,25 @@
   <script src="lib/angular/1.2.27/angular-route.min.js"></script>
 
   <script src="lib/angular-route-segment/1.3.3/angular-route-segment.min.js"></script>
-  <!-- 
-  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload-shim.min.js"></script>
-  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload.min.js"></script>
-  <script src="lib/angular-file-upload-master/2.1.1/FileAPI.min.js"></script>
- -->
-  <script src="lib/ng-file-upload/4.0.0/ng-file-upload-shim.min.js"></script> 
-  <script src="lib/ng-file-upload/4.0.0/ng-file-upload.min.js"></script> 
-
-
-  <script src="lib/angular-flash/angular-flash.min.js"></script>
-  <script src="lib/angular-loading-bar/loading-bar.js"></script>
-
+  
+  
   <script src="lib/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="lib/bootstrap-slider/bootstrap-slider.js"></script>
   <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.11.2.min.js"></script>
 
-  <!-- For Limes Service -->
+  <!-- Misc -->
+  <script src="lib/ng-file-upload/4.0.0/ng-file-upload-shim.min.js"></script> 
+  <script src="lib/ng-file-upload/4.0.0/ng-file-upload.min.js"></script> 
+  <script src="lib/http-auth-interceptor.js"></script>
   <script src="lib/xml2json.min.js"></script>
-
+  <script src="lib/angular-flash/angular-flash.min.js"></script>
+  <script src="lib/angular-loading-bar/loading-bar.js"></script>
+<!-- 
+  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload-shim.min.js"></script>
+  <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload.min.js"></script>
+  <script src="lib/angular-file-upload-master/2.1.1/FileAPI.min.js"></script>
+ -->
+ 
   <!-- services for the different modules/pages -->
   <script src="js/app.js"></script>
   <script src="js/services/config.js"></script>
