--- a/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
@@ -17,21 +17,13 @@
 	    <label for="inputFile" class="col-sm-2 control-label">File input</label>
 	    	  <!-- <input type="file" ng-file-select="onFileSelect($files)" > -->
 	    <div class="col-sm-8">
-				<input type="file" ngf-select ng-model="importFile.files" accept=".nt,.n3,.ttl,.rdf">
+				<input type="file" ngf-select ng-model="importFile.files" accept=".nt,.n3,.ttl,.rdf" >
 				<div class="error" ng-show="uploadedError()">File value is invalid or missed (for required fields)<span>{{uploadMessage}}</span></div>
 			</div>
 	  </div>
-	 	<div class="form-group">
-			<label for="graph" class="col-sm-2 control-label">To dataset </label>
-			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="targetGraph" class="form-control" ng-model="importRdf.targetGraph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" required></select>
-			</div>
-    </div>
+
+	  <target-graph></target-graph>
+
 	  <div class="form-group">
 	  	<div class="col-sm-2"></div>
 	  	<div class="col-sm-8">
@@ -47,24 +39,15 @@
 		<div class="form-group">
 	    <label for="inputUrl" class="col-sm-2 control-label">Url input</label>
 	    <div class="input-group col-sm-8">
-		  	<input type="text" id="inputUrl" name="inputUrl" class="form-control" ng-model="importRdf.source" regex-validate="url" required>
+		  	<input type="text" id="inputUrl" name="inputUrl" class="form-control" ng-model="importRdf.source" regex-validate="url" ng-change="updateNewTargetInfo()" required>
 				<div class="error" ng-show="urlForm.inputUrl.$dirty && urlForm.inputUrl.$invalid">Invalid:
           	<span ng-show="urlForm.inputUrl.$error.required">Specify a valid URL</span>
           	<span ng-show="urlForm.inputUrl.$error.regexValidate">This is not a valid URL.</span>
        	</div>
       </div>
 	  </div>
-	  <div class="form-group">
-			<label for="graph" class="col-sm-2 control-label">To dataset </label>
-			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="targetGraph" class="form-control" ng-model="importRdf.targetGraph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" required></select>
-			</div>
-		</div>
+	  <target-graph></target-graph>
+
 	  <div class="form-group">
 	  	<div class="col-sm-2"></div>
 	  	<div class="input-group col-sm-8">
@@ -81,7 +64,7 @@
 		<div class="form-group">
 	   	<label for="endPoint" class="col-xs-2 control-label">SPARQL EndPoint</label>
 	   	<div class="input-group col-sm-8">
-		 		<select id="endPoint" class="form-control" ng-model="importRdf.source" ng-options="c.endpoint as c.label for c in endpoints" required></select>
+		 		<select id="endPoint" class="form-control" ng-model="importRdf.source" ng-options="c.endpoint as c.label for c in endpoints" ng-change="updateNewTargetInfo()" required></select>
      	</div>
 	  </div>
 		<div class="form-group">
@@ -93,17 +76,9 @@
       	</div>
       </div>
 	  </div>
-		<div class="form-group">
-			<label for="graph" class="col-xs-2 control-label">To dataset </label>
-			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="targetGraph" class="form-control" ng-model="importRdf.targetGraph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" required></select>
-			</div>
-		</div>
+
+	  <target-graph></target-graph>
+
 	  <div class="form-group">
 			<div class="col-sm-2"></div>
 	  	<div class="input-group col-sm-8">
@@ -117,28 +92,8 @@
 	<!-- Import from LOCAL sparql  -->
 	<form ng-show="localQueryElements" class="form-horizontal InputForm" role="form" name="localForm" novalidate>
 		
-		<div class="form-group">
-			<label for="graph" class="col-xs-2 control-label">From dataset </label>
-			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="sourceGraph" class="form-control" ng-model="importRdf.source" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in readableGraphs" required></select>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="graph" class="col-xs-2 control-label">To dataset </label>
-			<div class="input-group col-sm-8">
-				<div class="input-group-btn">
-					<button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
-						<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
-					</button>
-				</div>
-				<select id="targetGraph" class="form-control" ng-model="importRdf.targetGraph" ng-options="namedgraph.name as describeGraph(namedgraph) for namedgraph in writableGraphs" required></select>
-			</div>
-		</div>
+		<source-graph source-changed="updateNewTargetInfo()"></source-graph>
+		<target-graph></target-graph>
 
 		<div class="form-group">
 			<div class="col-sm-2"></div>
