initial intiegration mvc's

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
   <link href="lib/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet" />
   <link href="lib/bootstrap-slider/bootstrap-slider.css" rel="stylesheet" />
   <link href="lib/angular-loading-bar/loading-bar.css" rel="stylesheet">
+  <link href="lib/angular-bootstrap-datetimepicker-0.3.13/src/css/datetimepicker.css" rel="stylesheet"> 
   <link href="css/app.css" rel="stylesheet" />
   <link rel="icon" type="image/png" href="img/favicon.png">
 
@@ -149,6 +150,10 @@
   <script src="lib/xml2json.min.js"></script>
   <script src="lib/angular-flash/angular-flash.min.js"></script>
   <script src="lib/angular-loading-bar/loading-bar.js"></script>
+  
+  <script src="lib/moment.js"></script>
+  <script src="lib/angular-moment-0.10.2/angular-moment.min.js"></script>
+  <script src="lib/angular-bootstrap-datetimepicker-0.3.13/src/js/datetimepicker.js"></script>
 <!-- 
   <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload-shim.min.js"></script>
   <script src="lib/angular-file-upload-master/2.1.1/angular-file-upload.min.js"></script>
@@ -173,6 +178,7 @@
   <script src="js/services/data-sources-service.js"></script>
   <script src="js/services/co-evolution-service.js"></script>
   <script src="js/services/import-rdf-service.js"></script>
+  <script src="js/services/data-simulator-service.js"></script>
 
   <!-- global controllers -->
   <script src="js/controllers.js"></script>
@@ -184,9 +190,11 @@
   <script src="js/admin/roles-controller.js"></script>
   <!-- workbench controllers -->
   <script src="js/workbench/dashboard-controller.js"></script>
+  
   <script src="js/workbench/extraction-and-loading/import-rdf-controller.js"></script>
   <script src="js/workbench/extraction-and-loading/sparqlify-controller.js"></script>
   <script src="js/workbench/extraction-and-loading/triplegeo-controller.js"></script>
+  <script src="js/workbench/extraction-and-loading/data-simulator-controller.js"></script>
   <script src="js/workbench/search-querying-and-exploration/facete-controller.js"></script>
   <script src="js/workbench/search-querying-and-exploration/mappify-controller.js"></script>
   <script src="js/workbench/search-querying-and-exploration/virtuoso-controller.js"></script>
