--- a/src/main/webapp/js/workbench/search-querying-and-exploration/esta-ld.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/esta-ld.html
@@ -1,29 +1,24 @@
-<div ng-controller="VirtuosoCtrl">
-
+<div ng-controller="EstaLdCtrl">  
   <component-header></component-header>
 
-  <h4>Launch Virtuoso endpoint Interface</h4>
-
-  <form name="virtuosoForm" class="form-horizontal InputForm" role="form"  novalidate>
+  <form class="form-horizontal InputForm" role="form"  novalidate>
 
     <div class="form-group">
       <label for="Endpoint" class="col-xs-2 control-label">Endpoint</label>
       <div class="input-group col-sm-8">
-        <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="virtuoso.service"></input>
+        <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="estald.service"></input>
       </div>
     </div>
 
-
     <source-graph source-changed="updateServiceParams()"></source-graph>
-
 
     <div class="form-group">
       <div class="col-sm-2"></div>
-      <a class="btn btn-success btn-large" target="_blanc" href="{{url}}">Launch</a>
+      <a class="btn btn-success btn-large" ng-click="openService();">Launch Service</a>
       </div>
     </div>
 
   </form>
-   
+
 </div>
 
