--- a/src/main/webapp/js/workbench/dashboard.html
+++ b/src/main/webapp/js/workbench/dashboard.html
@@ -5,14 +5,14 @@
 			  <div class="panel panel-default" ng-repeat="group in groups | filter:showGroup">
 				  <div class="panel-heading">
 					  <h5 class="panel-title">
-				        <span class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{group.id}}">
+				        <span class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" ng-href="#{{group.id}}" ng-click="collapse('#'+group.id)">
 				          {{group.title}}
 				        </span>
 				      </h5>
 				  </div>
 				  <div id="{{group.id}}" class="panel-collapse collapse" ng-controller="SidebarCtrl">
 					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items | filter:showItem">
-							<h6><a class="list-group-item" target="{{item.target}}" href="{{item.route}}">{{item.name}}</a></h6>
+							<h6><a class="list-group-item" target="{{item.target}}" ng-click="routeTo(item.url)" href="">{{item.name}}</a></h6>
 					  </div>
 				  </div>
 			  	</div>
