guided tour css enhanced

--- a/src/main/webapp/js/account/account.html
+++ b/src/main/webapp/js/account/account.html
@@ -1,10 +1,8 @@
-<div class="row contents" ng-controller="AccountCtrl">
-  <div class="col-lg-2">
-  </div>
+<div class="col-xs-offset-2" ng-controller="AccountCtrl">
 
-  <h2>User Account</h2>
+  <h3 class="green bold">User Account</h3>
 
-  <div class="col-lg-8">
+  <div class="row col-lg-8" id="accountdata">
     <table class="table table-bordered" >
       <tr>
         <td>Username:</td>
