--- a/src/main/webapp/js/workbench/search-querying-and-exploration/esta-ld.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/esta-ld.html
@@ -3,14 +3,17 @@
 
   <form class="form-horizontal InputForm" role="form"  novalidate>
 
+
+
     <div class="form-group">
-      <label for="Endpoint" class="col-xs-2 control-label">Endpoint</label>
+      <label for="endPoint" class="col-xs-2 control-label">SPARQL EndPoint</label>
       <div class="input-group col-sm-8">
-        <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="estald.service"></input>
+        <select id="endPoint" class="form-control" ng-model="source.endpoint" ng-options="c.endpoint as c.label for c in endpoints" required></select>
       </div>
     </div>
 
-    <source-graph source-changed="updateServiceParams()"></source-graph>
+
+    <source-graph ng-show="isLocalEndpoint()"></source-graph>
 
     <div class="form-group">
       <div class="col-sm-2"></div>
