integrated esta-ld and some bug fixing

--- a/src/main/webapp/js/settings/settings.html
+++ b/src/main/webapp/js/settings/settings.html
@@ -28,6 +28,8 @@
         <tr>
         <td>Endpoint:</td><td>{{settings.endpointService}}</td>
         </tr>
+        <td>Workbench URL:</td><td>{{settings.workbenchUrl}}</td>
+        </tr>
     </table>
 	</div>
 
